--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 application.name=@project.artifactId@
 build.version=@project.version@
 build.timestamp=@timestamp@
+
+# Spring Boot Actuator
+management.endpoints.web.exposure.include=*
+server.port=80
