--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sergio/demo
+  name: sergio-demo
   labels:
-    app: sergio/demo
+    app: sergio-demo
 spec:
   replicas: 5
   selector:
     matchLabels:
-      app: sergio/demo
+      app: sergio-demo
   template:
     metadata:
       labels:
-        app: sergio/demo
+        app: sergio-demo
     spec:
       containers:
-        - name: sergio/demo
+        - name: sergio-demo
           image: crmultitenant.azurecr.io/sergio/demo:latest
           ports:
             - containerPort: 80
@@ -23,10 +23,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: sergio/demo
+  name: sergio-demo
 spec:
   selector:
-    app: sergio/demo
+    app: sergio-demo
   ports:
     - port: 80
       targetPort: 80
