--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,6 +19,17 @@ spec:
           image: crmultitenant.azurecr.io/sergio/demo:latest
           ports:
             - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+              initialDelaySeconds: 30
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+              initialDelaySeconds: 30
+
 ---
 apiVersion: v1
 kind: Service
