--- a/deployment.yaml
+++ b/deployment.yaml
@@ -23,14 +23,18 @@ spec:
             httpGet:
               path: /actuator/health
               port: 8080
-            initialDelaySeconds: 5
+            initialDelaySeconds: 30
             periodSeconds: 10
+            failureThreshold: 3
             livenessProbe:
               httpGet:
                 path: /actuator/health
                 port: 8080
-              initialDelaySeconds: 10
-              periodSeconds: 20
+              initialDelaySeconds: 30
+              periodSeconds: 10
+              failureThreshold: 3
+
+
 
 ---
 apiVersion: v1
