--- a/deployment/deployment-gt.yaml
+++ b/deployment/deployment-gt.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sergio-demo
+  name: sergio-demo-gt
   labels:
-    app: sergio-demo
+    app: sergio-demo-gt
 spec:
   replicas: 5
   selector:
     matchLabels:
-      app: sergio-demo
+      app: sergio-demo-gt
   template:
     metadata:
       labels:
-        app: sergio-demo
+        app: sergio-demo-gt
     spec:
       containers:
-        - name: sergio-demo
+        - name: sergio-demo-gt
           image: crmultitenant.azurecr.io/sergio/demo:latest
           ports:
             - containerPort: 8080
@@ -34,16 +34,14 @@ spec:
             periodSeconds: 10
             failureThreshold: 3
 
-
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: sergio-demo
+  name: sergio-demo-gt
 spec:
   selector:
-    app: sergio-demo
+    app: sergio-demo-gt
   ports:
     - port: 8080
       targetPort: 8080
