--- a/deployment/deployment-sa.yaml
+++ b/deployment/deployment-sa.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: sergio-demo-sa
-          image: crmultitenant.azurecr.io/sergio/demo:latest
+          image: crmultitenant.azurecr.io/sergio/demo:2.0.0
           ports:
             - containerPort: 8080
           readinessProbe:
@@ -45,4 +45,4 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
-  type: LoadBalancer
+  type: ClusterIP
