--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
+  ingressClassName: webapprouting.kubernetes.azure.com
   rules:
     - http:
         paths:
