--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ build.timestamp=@timestamp@
 
 # Spring Boot Actuator
 management.endpoints.web.exposure.include=*
+logging.level.org.springframework.web: DEBUG
 
