--- a/deployment/deployment-gt.yaml
+++ b/deployment/deployment-gt.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sergio-demo-gt
+  namespace: golo-gt
   labels:
     app: sergio-demo-gt
 spec:
@@ -39,6 +40,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sergio-demo-gt
+  namespace: golo-gt
 spec:
   selector:
     app: sergio-demo-gt
