--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -14,6 +14,7 @@ spec:
             backend:
               service:
                 name: sergio-demo-gt
+                namespace: golo-gt
                 port:
                   number: 8080
           - pathType: Prefix
@@ -21,5 +22,6 @@ spec:
             backend:
               service:
                 name: sergio-demo-sa
+                namespace: golo-sa
                 port:
                   number: 8080
