--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sergio-demo-ingress
+  namespace: golo-gt
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
@@ -9,20 +10,17 @@ spec:
   rules:
     - http:
         paths:
-          - pathType: ImplementationSpecific
+          - pathType: Prefix
             path: "/gt"
             backend:
               service:
                 name: sergio-demo-gt
                 port:
                   number: 8080
-              namespace: golo-gt
-          - pathType: ImplementationSpecific
+          - pathType: Prefix
             path: "/sa"
             backend:
               service:
                 name: sergio-demo-sa
                 port:
                   number: 8080
-              namespace: golo-sa
-
