--- a/deployment/deployment-gt.yaml
+++ b/deployment/deployment-gt.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sergio-demo-gt
+  name: sergio-demo
   namespace: golo-gt
   labels:
-    app: sergio-demo-gt
+    app: sergio-demo
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: sergio-demo-gt
+      app: sergio-demo
   template:
     metadata:
       labels:
-        app: sergio-demo-gt
+        app: sergio-demo
     spec:
       containers:
-        - name: sergio-demo-gt
+        - name: sergio-demo
           image: crmultitenant.azurecr.io/sergio/demo:5.0.0
           ports:
             - containerPort: 8080
@@ -39,11 +39,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: sergio-demo-gt
+  name: sergio-demo
   namespace: golo-gt
 spec:
   selector:
-    app: sergio-demo-gt
+    app: sergio-demo
   ports:
     - port: 8080
       targetPort: 8080
