--- a/kubernetes/deployment-gt.yaml
+++ b/kubernetes/deployment-gt.yaml
@@ -20,6 +20,11 @@ spec:
           image: crmultitenant.azurecr.io/sergio/demo:5.0.0
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              cpu: 1m
+            limits:
+              cpu: 1000m
           readinessProbe:
             httpGet:
               path: /actuator/health
