--- a/kubernetes/hpa-gt.yaml
+++ b/kubernetes/hpa-gt.yaml
@@ -19,6 +19,9 @@ spec:
           averageUtilization: 80
   behavior:
     scaleDown:
-      stabilizationWindowSeconds: 30  # Adjust the stabilization window as needed
-      cooldownSeconds: 30              # Adjust the cooldown period as needed
+      stabilizationWindowSeconds: 30
+      policies:
+        - type: Percent
+          value: 100
+          periodSeconds: 15
 
